<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">FreeRun</string>
    <string name="menu_settings">Settings</string>
    <string name="status_start">开始</string>
    <string name="status_pause">暂停</string>
    <string name="status_cancel">取消</string>
    <string name="status_finished">结束</string>
    <string name="status_continue">继续</string>
    <string name="title_activity_walking_process">WalkingProcess</string>
    <string name="nothing"></string>
    <string name="image_arrow">Arrow image</string>
    <string name="open_gps_message">为了提供更精确的记录，请打开GPS并选择\“高精确度\”模式，否则无法记录数据。</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="gps_signal_text">GPS信号: <xliff:g id="gps_signal_strength">%1$s</xliff:g></string>
    <string name="no_gps">无</string>
    <string name="nomarl_gps">正常</string>
    <string name="bad_gps">弱</string>
    <string name="good_gps">强</string>
    <string name="menu_sort_down">sort_down</string>
    <string name="menu_sort_up">sort_up</string>
    <string name="map_DownloadCity">Downloaded City Maps</string>
    <string name="map_allCity">All City Maps</string>
    <string name="moreText">More ...</string>
    <string name="sports_details">Sports details</string>
    <string name="record_history">My sports record</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_running_tab">FreeRun</string>
    <string name="title_more_setup">More</string>
    <string name="title_activity_wlecom">WlecomActivity</string>
    <string name="action_settings">Settings</string>
    <string name="please_account_email">请输入Email账号</string>
    <string name="edt_login_pwd">请输入密码</string>
    <string name="tv_forget_psw">忘记密码</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登陆</string>
    <string name="please_account_pwd">请输入密码</string>
    <string name="ask_for_login">你确认要登录吗？</string>
    <!-- 注册须知 -->
    <string name="titleOfInstrction">注册须知</string>
    <string name="agreement">您可安装无限制数量的本软件产品来使用。复制、分发和传播：您可以复制、分发和传播无限制数量的软件产品，但您必须保证每一份复制、
        分发和传播都必须是完整和真实的，包括所有有关本软件产品的软件、电子文档，版权和商标宣言，亦包括本协议。 二、其它权利和限制说明。付费注册版本：  
        个人使用授权版本只能由单个用户在一台或多台计算机上亲自使用；  公司使用授权版本允许公司内部员工在固定场所使用。禁止反向工程、反向编译和反向汇编：  
        您不得对本软件产品进行反向工程、反向编译和反向汇编，不得删除本软件及其他副本上一切关于版权的信息，不得制作和提供该软件的注册机及破解程序。
        除非适用法律明文允许上述活动，否则您必须遵守此协议限制。组件的分隔：  本软件产品是被当成一个单一产品而被授予许可使用，不得将各个部分分开用于任何目的行动。 
        保证：  本软件版权人 鱼鱼软件 特此申明对本软件产品之使用不提供任何保证。版权人将不对任何用户保证本软件产品的适用性，不保证无故障产生；
        亦不对任何用户使用此软件所遭遇到的任何理论上的或实际上的损失承担负责.</string>
    <string name="agree">我同意</string>
    <string name="disagree">我不同意</string>
    <string name="next">下一步</string>
    <string name="goback">返回</string>    
    
    <!-- 注册 -->
    <string name="repassword">重复密码</string>
    <string name="register_title">注册</string>
    <string name="spin_prompt">联系方式</string>
    <string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="telephone">手机号</string>
	
	
    <!-- 登录 -->
    <string name="title_main">实时信息交易平台</string>
    <string name="userName">用户名</string>
    <string name="userEmail">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="instruction">使用说明</string>
    

</resources>
