<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/root_view"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent" >
    
    <ImageView 
        android:id="@+id/iv_wel_bg"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:background="@color/black_white" 
        android:scaleType="centerCrop" 
        android:contentDescription="@string/app_name" />
    
    <RelativeLayout android:id="@+id/layout_bottom" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="20.0dip" 
        android:layout_alignParentBottom="true">
        
        <Button
            android:id="@+id/btn_welcome_trial"
            android:gravity="center" 
            android:paddingLeft="30.0dip" 
            android:paddingRight="30.0dip" 
            android:textColor="@color/white"
            android:visibility="visible" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:background="@color/palegreen" 
            android:text="直接进入试用" 
            android:layout_alignParentBottom="true" 
            android:layout_centerHorizontal="true"  />
        
        <RelativeLayout 
            android:id="@+id/layout_welcome_other_login" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="20.0dip" 
            android:layout_above="@id/btn_welcome_trial">
            
            <TextView
                android:id="@+id/tv_other_login" 
                android:textSize="@dimen/textSize_24pt" 
                android:textColor="@color/white" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginLeft="20.0dip" 
                android:text="其他账号登录：" 
                android:layout_centerHorizontal="true" />
            <Button android:id="@+id/btn_weibo_login" 
                android:background="@drawable/icon_login_weibo" 
                android:layout_width="36.0dip" 
                android:layout_height="36.0dip" 
                android:layout_marginLeft="20.0dip" 
                android:layout_marginTop="@dimen/layout_running_margin" 
                android:layout_marginRight="20.0dip" 
                android:layout_below="@id/tv_other_login" 
                android:layout_centerHorizontal="true"  />
            <Button android:id="@+id/btn_qq_login" 
                android:background="@drawable/icon_login_qq" 
                android:layout_width="36.0dip" 
                android:layout_height="36.0dip" 
                android:layout_toLeftOf="@id/btn_weibo_login" 
                android:layout_alignBottom="@id/btn_weibo_login"  />
            <Button android:id="@+id/btn_weixin_login" 
                android:background="@drawable/icon_login_wechat" 
                android:layout_width="36.0dip" 
                android:layout_height="36.0dip" 
                android:layout_toRightOf="@id/btn_weibo_login" 
                android:layout_alignBottom="@id/btn_weibo_login"  />
        </RelativeLayout>
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/layout_login_frame" 
        android:paddingBottom="30.0dip" 
        android:visibility="visible" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_centerVertical="true">
        <RelativeLayout 
            android:id="@+id/layout_edt_info" 
            android:paddingLeft="20.0dip" 
            android:layout_width="fill_parent" 
            android:layout_height="100.0dip" 
            android:layout_alignParentTop="true">
            <View android:id="@+id/tv_welcome_divider"
                android:background="@drawable/divider_line" 
                android:layout_width="fill_parent" 
                android:layout_height="1.0dip" 
                android:layout_centerVertical="true" />
            <ImageView android:id="@+id/img_login_username" 
                android:background="@drawable/icon_account" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginBottom="@dimen/layout_running_margin" 
                android:layout_above="@id/tv_welcome_divider" 
                android:contentDescription="@string/app_name" />
            
            <EditText android:textColor="@color/white" 
                android:id="@+id/edt_login_username" 
                android:paddingLeft="@dimen/layout_running_margin" 
                android:layout_width="fill_parent" 
                android:layout_height="46.0dip" 
                android:hint="@string/please_account_email"
                android:layout_toRightOf="@id/img_login_username" 
                android:layout_above="@id/tv_welcome_divider"
                android:layout_centerHorizontal="true" 
                android:inputType="textEmailAddress" 
                android:imeOptions="actionNext" 
                android:textCursorDrawable="@null" />
            
            <ImageView android:id="@+id/img_login_password" 
                android:background="@drawable/icon_password" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="@dimen/layout_running_margin" 
                android:layout_below="@id/tv_welcome_divider" 
                android:contentDescription="@string/app_name" />
            
            <EditText android:textColor="@color/white" 
                android:id="@+id/edt_login_pwd" 
                android:paddingLeft="@dimen/layout_running_margin" 
                android:layout_width="fill_parent" 
                android:layout_height="200.0dip" 
                android:hint="@string/please_account_pwd" 
                android:layout_toRightOf="@id/img_login_password" 
                android:layout_below="@id/tv_welcome_divider" 
                android:inputType="textPassword" 
                android:imeOptions="actionNone" 
                android:textCursorDrawable="@null"  />
            
            <TextView android:textSize="@dimen/textSize_24pt" 
                android:textColor="@color/white" 
                android:gravity="center" 
                android:id="@+id/tv_forget_psw" 
                android:paddingLeft="8.0dip" 
                android:paddingTop="5.0dip" 
                android:paddingRight="8.0dip" 
                android:paddingBottom="5.0dip" 
                android:clickable="true" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:layout_marginRight="12.0dip" 
                android:text="@string/tv_forget_psw" 
                android:layout_alignBaseline="@id/edt_login_pwd" 
                android:layout_alignParentRight="true" 
                android:onClick="onWelClick" />
        </RelativeLayout>
        
        <LinearLayout android:gravity="center_horizontal" 
            android:orientation="horizontal" 
            android:id="@+id/layout_signin_signup" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip" 
            android:layout_below="@id/layout_edt_info">
            <Button 
                android:textSize="24dp"
                android:textColor="@color/white" 
                android:id="@+id/btn_register" 
                android:background="@color/palegreen"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="12dp"
                android:layout_width="wrap_content" 
                android:layout_height="50.0dip" 
                android:text="@string/btn_register" 
                android:layout_weight="1.0"  />
            <Button 
                android:textSize="24dp" 
                android:textColor="@color/white" 
                android:id="@+id/btn_login"
                android:background="@color/palegreen" 
                android:layout_width="wrap_content" 
                android:layout_height="50.0dip" 
                android:layout_marginLeft="12dip"
                android:layout_marginRight="24dp" 
                android:text="@string/btn_login" 
                android:layout_weight="1.0"  />
            
        </LinearLayout>
    </RelativeLayout>
    
    <ImageView android:id="@+id/img_app_logo" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="10000.0dip" 
        android:layout_marginBottom="@dimen/logo_margin" 
        android:src="@drawable/img_app_logo" 
        android:layout_above="@id/layout_login_frame" 
        android:layout_centerHorizontal="true" 
        android:contentDescription="@string/app_name" />
    
    <ImageView android:id="@+id/img_first_copyright" 
        android:background="@drawable/ic_launcher" 
        android:visibility="gone" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="10.0dip" 
        android:layout_below="@id/layout_login_frame" 
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />
</RelativeLayout>


